using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class MyTags : MonoBehaviour
{
    public static string RUN_ANIMATION = "Run";

    public static string DEAD_ANIMATION = "Dead";

    public static string JUMP_ANIMATION = "Jump";

    public static string PHONE_ANIMATION = "Phone";

    public static string DONATE_ANIMATION = "Donate";


    public static string ATTACK_ANIMATION = "Attack";

    public static string RUN_ATTACK_ANIMATION = "RunAttack";

    public static string RUN_TRIGGER = "Run";

    public static string STOP_TRIGGER = "Stop";

    public static string ATTACK_TRIGGER = "Attack";

    public static string DONATE_TRIGGER = "donate";

    public static string JUMP_TRIGGER = "Jump";

    public static string DEAD_TRIGGER = "Dead";

    public static string PHONE_TRIGGER = "phone";

    public static string PLAYER_TAG = "Player";

    public static string ENEMY_TAG = "Enemy";

    // Emy

    public static string IDLE_ANIMATION = "idle";

    public static string BEG1_ANIMATION = "beg 1";

    public static string BEG2_ANIMATION = "beg 2";

    public static string BEG1_TRIGGER = "Beg 1";

    public static string BEG2_TRIGGER = "Beg 2";

    public static string HEAD_TRIGGER = "nod";

    //timmy

    public static string DRINK1_TRIGGER = "Drunk1";

    public static string DRINK2_TRIGGER = "Drunk2";

    public static string DRINK1_ANIMATION = "drunk 1";

    public static string DRINK2_ANIMATION = "drunk 2";
}

